# Gojira-Old

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
gojira/: __init__.py  __main__.py  bot.py  config.py.example
gojira/database/: __init__.py  chats.py  core.py  favorites.py  language.py  nhentai.py  users.py
gojira/locales/: en.yml  pt_BR.yml
gojira/modules/: __init__.py  about.py  any.py  broadcast.py  favorites.py  language.py  quotes.py  start.py  stats.py  sudo.py  user.py  view.py
gojira/modules/anime/: categories.py  favorites.py  inline.py  scan.py  start.py  suggestions.py  upcoming.py  view.py
gojira/modules/character/: favorites.py  inline.py  start.py  suggestions.py  view.py
gojira/modules/manga/: categories.py  favorites.py  inline.py  nhentai_inline.py  start.py  suggestions.py  upcoming.py  view.py
gojira/modules/staff/: favorites.py  inline.py  start.py  suggestions.py  view.py
gojira/modules/studio/: favorites.py  start.py  suggestions.py  utils.py  view.py
gojira/utils/: __init__.py  backup.py  filters.py  modules.py
gojira/utils/langs/: __init__.py  core.py  decorators.py  load_langs.py  methods.py
