[tool.poetry]
name = "gojira"
version = "1.0.0"
description = "A anime bot for Telegram made in Python"
authors = ["Hitalo"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
httpx = {version = "0.22.0", extras = ["http2"]}
humanize = "3.11.0"
meval = "2.5"
PyYAML = "6.0"
psutil = "5.8.0"
TgCrypto = "1.2.3"
sentry-sdk = "1.5.10"
telegraph = "2.1.0"
aiocron = "1.8"
uvloop = {version = "^0.16", optional = true}
python-anilist = {git = "https://github.com/AmanoTeam/python-anilist", branch = "main"}
pyrogram = {git = "https://github.com/AmanoTeam/Pyrogram"}

[tool.poetry.dev-dependencies]
black = "^22.1"
isort = "^5.10.1"
flake8 = "^4.0.1"

[tool.poetry.extras]
fast = ["uvloop"]

[tool.black]
exclude = '''
/(
    \.git
  | \.pytest_cache
  | \.vscode
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
