[tool.poetry]
name = "gojira"
version = "1.0.0"
description = "A anime bot for Telegram made in Python"
authors = ["Hitalo <hitalo@amanoteam.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
humanize = "^4.2.3"
meval = "^2.5"
PyYAML = "^6.0"
psutil = "^5.9.1"
TgCrypto = "^1.2.3"
sentry-sdk = "^1.7.2"
aiocron = "^1.8"
numpy = "^1.23.3"
uvloop = {version = "^0.16", optional = true}
telegraph = {version = "^2.1.0", extras = ["aio"]}
httpx = {version = "^0.23.0", extras = ["http2"]}
python-anilist = {git = "https://github.com/AmanoTeam/python-anilist", branch = "main"}
pyrogram = {git = "https://github.com/AmanoTeam/Pyrogram"}

[tool.poetry.dev-dependencies]
black = "^22.6"
flake8 = "^4.0.1"
mypy = "^0.971"
isort = "^5.10.1"

[tool.poetry.extras]
fast = ["uvloop"]

[tool.black]
target-version = ['py39', 'py310']
exclude = '''
/(
    \.git
  | \.pytest_cache
  | \.vscode
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
